# fake-useragent

./: .coveragerc  .gitignore  .landscape.yaml  .travis.yml  AUTHORS  CONTRIBUTORS.rst  MANIFEST.in  README.md  README.rst  fake_useragent-0.1.11-py3-none-any.whl  pyproject.toml  pytest.ini  requirements.txt  requirements_converter.txt  setup.cfg  setup.py  tox.ini  update_data_file.sh  update_list.py  update_user_agents.py
.github/: FUNDING.yml
.github/workflows/: action.yml  codeql.yml  dependabot_auto_merge.yml  ruff.yml  tox.yml  update_bundled_useragents.yml
.pytest_cache/v/cache/: nodeids
cache_scraper/: .dockerignore  .gitignore  Dockerfile  README.md  build_and_push_image.sh  cronjob_spider.py  requirements.txt  scrapy.cfg  start_spider.py  useragentscraper-compose.yml
cache_scraper/useragentscraper/: items.py  middlewares.py  pipelines.py  settings.py
cache_scraper/useragentscraper/spiders/: useragent.py
docs/: Makefile  conf.py  index.rst
fake_useragent/: __init__.py  build.py  errors.py  exceptions.py  fake.py  log.py  randomize.py  settings.py  utils.py
fake_useragent/data/: fallback.json
src/fake_useragent/: __init__.py  errors.py  fake.py  get_version.py  settings.py  utils.py
src/fake_useragent/data/: browsers.json  browsers.jsonl
tests/: __init__.py  base.py  conftest.py  test_errors.py  test_fake.py  test_utils.py  tests.py  utils.py
tests/assets/: chrome.html  no_browser_versions.html
ua-converter/: requirements.txt  ua_convert.py
