[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "fake-useragent"
version = "2.0.3"
authors = [
    { name = "Melroy van den Berg", email = "melroy@melroy.org" },
    { name = "Victor Kovtun", email = "hellysmile@gmail.com" },
]
requires-python = ">=3.9"
dependencies = ["importlib-resources >= 6.0; python_version < '3.10'"]
description = "Up-to-date simple useragent faker with real world database"
keywords = [
    "user",
    "agent",
    "user agent",
    "useragent",
    "fake",
    "fake useragent",
    "fake user agent",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/fake-useragent/fake-useragent"

[tool.ruff]
target-version = "py39"
line-length = 142

[tool.ruff.lint]
select = [
    "B",
    "C4",
    "C9",
    "E",
    "F",
    "I",
    "PL",
    "S",
    "SIM",
    "W",
    "YTT",
    "DOC", # Ensure docstrings are consistent with signatures.
    "D",   # Check compliance with Python docstring conventions.
]

ignore = [
    "B904",
    "C408",
    "PLW2901",
    "SIM105",
    "SIM108",
    "D107",    # Allow no docstring in __init__, we document it in the class docstring.
]

[tool.ruff.lint.isort]
known-first-party = ["fake_useragent"]

[tool.ruff.lint.mccabe]
max-complexity = 13

[tool.ruff.lint.per-file-ignores]
"src/fake_useragent/__init__.py" = ["F401"]
"tests/**/*" = ["S", "SIM", "UP015", "D", "DOC"]
"docs/**/*" = ["D", "DOC"]

[tool.ruff.lint.pylint]
max-args = 7
max-branches = 13

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.setuptools]
zip-safe = false

[tool.setuptools.package-data]
"fake_useragent.data" = ["*.jsonl"]
"fake_useragent" = ["py.typed"]
