[build-system]
build-backend = "setuptools.build_meta"

requires = [ "setuptools>=77.0" ]

[project]
name = "fake-useragent"
version = "2.2.0"
license = "Apache-2.0"
description = "Up-to-date simple useragent faker with real world database"
readme.content-type = "text/markdown"
readme.file = "README.md"
keywords = [
  "agent",
  "fake",
  "fake user agent",
  "fake useragent",
  "user",
  "user agent",
  "useragent",
]
authors = [
  { name = "Melroy van den Berg", email = "melroy@melroy.org" },
  { name = "Victor Kovtun", email = "hellysmile@gmail.com" },
]
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: OS Independent",
  "Operating System :: POSIX",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
]

dependencies = [ "importlib-resources>=6; python_version<'3.10'" ]
urls.Homepage = "https://github.com/fake-useragent/fake-useragent"

[tool.setuptools]
zip-safe = false

[tool.setuptools.package-data]
"fake_useragent.data" = [ "*.jsonl" ]
"fake_useragent" = [ "py.typed" ]

[tool.ruff]
target-version = "py39"
line-length = 142

lint.select = [
  "B",
  "C4",
  "C9",
  "D",   # Check compliance with Python docstring conventions.
  "DOC", # Ensure docstrings are consistent with signatures.
  "E",
  "F",
  "I",
  "PL",
  "S",
  "SIM",
  "W",
  "YTT",
]
lint.ignore = [
  "B904",
  "C408",
  "D107",    # Allow no docstring in __init__, we document it in the class docstring.
  "PLW2901",
  "SIM105",
  "SIM108",
]
lint.per-file-ignores."docs/**/*" = [ "D", "DOC" ]
lint.per-file-ignores."src/fake_useragent/__init__.py" = [ "F401" ]
lint.per-file-ignores."tests/**/*" = [ "D", "DOC", "S", "SIM", "UP015" ]
lint.isort.known-first-party = [ "fake_useragent" ]
lint.mccabe.max-complexity = 13
lint.pydocstyle.convention = "google"
lint.pylint.max-args = 7
lint.pylint.max-branches = 13
